tests/positive/rule2_binary_search.safe
-- Test: rule2_binary_search
-- Description: Binary search with safe indexing.
--   At each step, the midpoint is computed from Lo and Hi which
--   are both valid array indices, so the access is in bounds.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.2.p131:30aba5f5
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.1.p126:812b54a8
-- Expected: ACCEPT

package Binary_Search is

   type Index is range 1 to 256;
   type Element is range 0 to 10_000;
   type Sorted_Array is array (Index) of Element;

   --  Search: reports whether Key is found and, when found, the index.
   --  Lo and Hi are always valid indices (type Index = 1..256).
   --  Mid = Lo + (Hi - Lo) / 2 is in Lo..Hi, hence in 1..256.
   function Search (Arr : Sorted_Array;
                     Key : Element;
                     Found : out Boolean;
                     Found_At : out Index) is
      Lo  : Index = Index.First;
      Hi  : Index = Index.Last;
      Mid : Index;
   begin
      Found = False;
      Found_At = Index.First;
      while Lo <= Hi loop
         --  Wide arithmetic: Lo + (Hi - Lo) / 2.
         --  Hi - Lo is in 0..255. (Hi - Lo)/2 is in 0..127.
         --  Lo + 0..127 is in 1..383, but Hi <= 256 so Mid <= Hi.
         --  Therefore Mid is in Lo..Hi, which is within 1..256.
         Mid = Lo + (Hi - Lo) / 2;
         --  Mid is of type Index (1..256). Provably in bounds.
         if Arr (Mid) == Key then
            Found_At = Mid;
            Found = True;
            return;
         else if Arr (Mid) < Key then
            if Mid == Index.Last then
               return;
            end if;
            Lo = Mid + 1;
         else
            if Mid == Index.First then
               return;
            end if;
            Hi = Mid - 1;
         end if;
      end loop;
   end Search;

end Binary_Search;
